[android x86-64] dom/ipc/tests/test_force_oop_iframe.html | application crashed [@ mozilla::dom::TabParent::RemoveWindowListeners()]
Categories
(Core :: DOM: Content Processes, defect, P3)
Tracking
()
Fission Milestone | Future |
People
(Reporter: nika, Unassigned)
References
Details
(Keywords: intermittent-failure, Whiteboard: [stockwell disabled])
Attachments
(2 files)
This is an error in M[tier-2](2)
on Android 7.0 x86-64 opt
which seems to have gone perma-orange with my stack landing on autoland: https://treeherder.mozilla.org/#/jobs?repo=autoland&resultStatus=running%2Csuccess%2Ctestfailed%2Cbusted%2Cexception%2Crunnable&searchStr=android%2C7.0%2Cx86-64%2Copt%2Cmochitests%2Ctest-android-em-7.0-x86_64%2Fopt-mochitest-e10s-2%2Cm(2)&selectedJob=240970026&revision=3592e8434aa07e699e29a1abcb96c72d5f9eb9f0
This appears to be caused by the Document associated with the frameloader of a tab being gone during shutdown, despite the corresponding content process and its nsFrameLoaders not being dead yet.
The crashing line appears to be: https://searchfox.org/mozilla-central/rev/d33d470140ce3f9426af523eaa8ecfa83476c806/dom/ipc/TabParent.cpp#358. It may be possible to fix by also null-checking OwnerDoc() in that if statement.
Reporter | ||
Updated•6 years ago
|
Reporter | ||
Comment 1•6 years ago
|
||
This line appears to be perma-failing right now in Android 7.0 x86-64 opt : M[tier-2](2)
. This seems to be being caused by the PContent's
channel being closed during shutdown also causing TabParents to be shut
down too late, after the document which they're embedded in has started
dying(?)
This patch just does the "obvious" thing of adding a null check (due to
it looking like a null dereference).
Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment 5•6 years ago
|
||
Nika, this still happens also after your latest push: https://treeherder.mozilla.org/#/jobs?repo=autoland&resultStatus=testfailed%2Cbusted%2Cexception&searchStr=android%2C7.0%2Cx86-64%2Copt%2Cmochitests%2Ctest-android-em-7.0-x86_64%2Fopt-mochitest-e10s-2%2Cm%282%29&fromchange=24545a98e9e1a15b075bb27944a33353f385278a&tochange=24d0d307385d2cf5ce66854e40b92d7b15dc8428&selectedJob=241298035
Updated•6 years ago
|
Comment 6•6 years ago
|
||
bugherder |
Comment 7•6 years ago
|
||
This not yet fixed, see #c5.
Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment 10•6 years ago
|
||
Updated•6 years ago
|
Comment 11•6 years ago
|
||
Comment 12•6 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Reporter | ||
Comment 14•6 years ago
|
||
We are not currently planning on working with oop iframes on android immediately, and this particular form of oop iframes will not be present in that situation. It's probably OK that this test is disabled for now, though perhaps we will need to come back to it in the future.
Comment 16•4 years ago
|
||
Resolving as incomplete because the test_force_oop_iframe.html test was removed in bug 1562029.
Updated•4 years ago
|
Description
•