Bug 1545178 - Check that OwnerDoc is non-null within RemoveWindowListeners, r=qdot

This line appears to be perma-failing right now in `Android 7.0 x86-64
opt : M[tier-2](2)`. This seems to be being caused by the PContent's
channel being closed during shutdown also causing TabParents to be shut
down too late, after the document which they're embedded in has started
dying(?)

This patch just does the "obvious" thing of adding a null check (due to
it looking like a null dereference).

Differential Revision: https://phabricator.services.mozilla.com/D27947